force-app/main/default/objects/Form_Field__mdt/Form_Field__mdt.object-meta.xml
<CustomObject>
    <label>Form Field</label>
    <pluralLabel>Form Fields</pluralLabel>
</CustomObject>