force-app/main/default/objects/Form_Field__mdt/fields/Controller_Field__c.field-meta.xml
<CustomField>
    <fullName>Controller_Field__c</fullName>
    <label>Controller Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>