force-app/main/default/objects/Form_Field__mdt/fields/Controlling_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Lookup__c</fullName>
    <description>If this field prepopulates from a parent record, enter the API Name of the Lookup field on this form that controls it (e.g., AccountId)</description>
    <inlineHelpText>If this field prepopulates from a parent record, enter the API Name of the Lookup field on this form that controls it (e.g., AccountId)</inlineHelpText>
    <label>Controlling Lookup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>