force-app/main/default/objects/Form_Field__mdt/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>The initial value for the field (e.g., &quot;Pending&quot;, &quot;0&quot;).</description>
    <label>Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>