force-app/main/default/objects/Form_Field__mdt/fields/Dynamic_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Dynamic_SOQL__c</fullName>
    <description>Admin can add an SOQL query in this field to fetch data for the field</description>
    <inlineHelpText>Example of what an Admin would put in this field for your exact use case: SELECT IsViolated FROM CaseMilestone WHERE CaseId = &apos;{Case__c}&apos; AND MilestoneType.Name = &apos;Resolution&apos; LIMIT 1</inlineHelpText>
    <label>Dynamic SOQL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>