force-app/main/default/objects/Form_Field__mdt/fields/Fetch_On_Edit__c.field-meta.xml
<CustomField>
    <fullName>Fetch_On_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Query the field even if section is hidden on edit</description>
    <label>Fetch On Edit</label>
    <type>Checkbox</type>
</CustomField>