force-app/main/default/objects/Form_Field__mdt/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
                <default>true</default>
                <label>Text</label>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Multi-Select Picklist</fullName>
            </value>
            <value>
                <fullName>Lookup</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>Long Text Area</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>