force-app/main/default/objects/Form_Field__mdt/fields/Form_Section__c.field-meta.xml
<CustomField>
    <fullName>Form_Section__c</fullName>
    <label>Form Section</label>
    <referenceTo>Form_Section__mdt</referenceTo>
    <relationshipLabel>Form Fields</relationshipLabel>
    <relationshipName>Form_Fields</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>