force-app/main/default/objects/Form_Field__mdt/fields/Formula_Logic__c.field-meta.xml
<CustomField>
    <fullName>Formula_Logic__c</fullName>
    <description>Simple JS math. Use field API names in curly braces. Example: ({Quantity__c} * {Rate__c}) + 10</description>
    <label>Formula Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>