force-app/main/default/objects/Form_Field__mdt/fields/Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Help_Text__c</fullName>
    <description>This will appear below the field on the form</description>
    <label>Help Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>