force-app/main/default/objects/Form_Field__mdt/fields/Input_Constraints_JSON__c.field-meta.xml
<CustomField>
    <fullName>Input_Constraints_JSON__c</fullName>
    <inlineHelpText>Optional input constraints (portal dynamic form only). JSON, e.g. {"maxLength":34,"minLength":8,"charset":"alphanumeric","pattern":"^GB.*","patternMessage":"Must start with GB"}. charset: numeric | alphanumeric.</inlineHelpText>
    <label>Input Constraints JSON</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>