force-app/main/default/objects/Form_Field__mdt/fields/Key_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Key_Prefix__c</fullName>
    <label>Key Prefix</label>
    <length>3</length>
    <type>Text</type>
</CustomField>