force-app/main/default/objects/Form_Field__mdt/fields/Lookup_Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Search_Field__c</fullName>
    <label>Lookup Search Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>