force-app/main/default/objects/Form_Field__mdt/fields/Override_Dependency_JSON__c.field-meta.xml
<CustomField>
    <fullName>Override_Dependency_JSON__c</fullName>
    <description>JSON string mapping controller values to options</description>
    <label>Override Dependency JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>