force-app/main/default/objects/Form_Field__mdt/fields/Override_Label__c.field-meta.xml
<CustomField>
    <fullName>Override_Label__c</fullName>
    <description>Use this if the field label exceeds the standard 40-character limit.</description>
    <label>Override Label</label>
    <length>100</length>
    <type>Text</type>
</CustomField>