force-app/main/default/objects/Form_Field__mdt/fields/Override_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Override_Picklist_Values__c</fullName>
    <description>Comma-separated values (e.g., Value1,Value2,Value3)</description>
    <label>Override Picklist Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>