force-app/main/default/objects/Form_Field__mdt/fields/Prepopulate__c.field-meta.xml
<CustomField>
    <fullName>Prepopulate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the lookup field should pre-populate if the form loads in the context of the record</description>
    <label>Prepopulate (Lookups Only)</label>
    <type>Checkbox</type>
</CustomField>