force-app/main/default/objects/Form_Field__mdt/fields/Relationship_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Parent_Field__c</fullName>
    <description>Stores the name of the reference field</description>
    <label>Relationship Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>