force-app/main/default/objects/Form_Field__mdt/fields/Required_Logic__c.field-meta.xml
<CustomField>
    <fullName>Required_Logic__c</fullName>
    <description>JSON condition to make a field on the form conditionally required</description>
    <label>Required Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>