force-app/main/default/objects/Form_Field__mdt/fields/Save_To_Database__c.field-meta.xml
<CustomField>
    <fullName>Save_To_Database__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Uncheck this if the field is for display/calculation only and should not be saved.</description>
    <label>Save To Database</label>
    <type>Checkbox</type>
</CustomField>