force-app/main/default/objects/Form_Field__mdt/fields/Source_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Source_Field_API_Name__c</fullName>
    <description>API Name of the field on the Source Object (defined by Key Prefix) to copy the value from.</description>
    <inlineHelpText>API Name of the field on the Source Object (defined by Key Prefix) to copy the value from.</inlineHelpText>
    <label>Source Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>