force-app/main/default/objects/Form_Field__mdt/fields/Target_Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_API_Name__c</fullName>
    <description>Overrides the Section object. Specifies which object this specific field saves to.</description>
    <label>Target Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>