force-app/main/default/objects/Form_Field__mdt/fields/Target_Object_Parent_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Object_Parent_Field__c</fullName>
    <description>If this field belongs to a child object, specify the API name of the lookup field on the child that relates to the parent.</description>
    <label>Target Object Parent Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>