force-app/main/default/objects/Form_Field__mdt/fields/Visibility_Logic__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Logic__c</fullName>
    <label>Visibility Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>