force-app/main/default/objects/Form_Field__mdt/listViews/Task_Fields.listView-meta.xml
<ListView>
    <fullName>Task_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Field_Type__c</columns>
    <columns>Form_Section__c</columns>
    <columns>Order__c</columns>
    <columns>Default_Value__c</columns>
    <columns>Key_Prefix__c</columns>
    <columns>Override_Dependency_JSON__c</columns>
    <columns>Override_Picklist_Values__c</columns>
    <columns>Prepopulate__c</columns>
    <columns>Read_Only__c</columns>
    <columns>Required__c</columns>
    <columns>Save_To_Database__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Form_Section__c</field>
        <operation>equals</operation>
        <value>Task_Details</value>
    </filters>
    <label>Task Fields</label>
</ListView>